<resources>
    <string name="app_name">sowhere</string>
    <string name="btn_go_back_to_main_page">Назад</string>
    <string name="tv_current_photo_indicator">1/5</string>
    <string name="tv_article_title">Центр москвы</string>
    <string name="tv_publisher_name">Елена Никодимова</string>
    <string name="tv_article_contents">
        Центр Москвы - это не просто географическое понятие, это настоящий символ столицы, магнетически притягивающий своим обаянием и богатством культурного наследия.
        Посетив этот удивительный район, я ощутил себя частью чего-то великого и неповторимого. Исторические здания, величественные площади, уютные скверы - все это создает атмосферу, полную вдохновения и восхищения.
        Особенно поражает разнообразие культурных и развлекательных мест: от музеев и театров до модных бутиков и уютных кафе. Прогулка по центру Москвы - это не просто прогулка, это настоящее погружение в историю и душу этого великого города.
    </string>
    <string name="btn_comments">Комментарии: 54</string>
</resources>